--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 </div>
 
                 <div id="detail">
-                    <p class="midashi">Meaning of The futere Card</p>
+                    <p class="midashi">Meaning of The future Card</p>
                     <div id="detailFuture">このままの状態で、これから起こる現実を現します。</div>
                     <p class="midashi">Meaning of The Past Card</p>
                     <div id="detailPast">未来に起こる現実の要因となる、過去の物事をここに現します。</div>
